--- a/cs50w/wiki/encyclopedia/static/encyclopedia/styles.css
+++ b/cs50w/wiki/encyclopedia/static/encyclopedia/styles.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 textarea {
-    height: 90vh;
+    height: 80vh;
     width: 80%;
 }
 
@@ -35,4 +35,8 @@ textarea {
 
 .sidebar h2 {
     margin-top: 5px;
+}
+
+.creation {
+    background-color: blue;
 }
