added the airline app

--- a/cs50w/wiki/encyclopedia/templates/encyclopedia/pages.html
+++ b/cs50w/wiki/encyclopedia/templates/encyclopedia/pages.html
@@ -6,5 +6,5 @@
 
 {% block body %}
     {{ body }}
-    <a href="{% url 'edit' %}"></a>
+    <a href="{% url 'edit' page=title %}">Edit page</a>
 {% endblock %}
