--- a/cs50w/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/cs50w/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -6,7 +6,7 @@
     <head>
         <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="{% static 'encyclopedia/styles.css' %}?v=00002" rel="stylesheet">
+        <link href="{% static 'encyclopedia/styles.css' %}?v=00003" rel="stylesheet">
     </head>
     <body>
         <div class="row">
@@ -23,7 +23,7 @@
                     <a href="{% url 'create' %}">Create New Page</a>
                 </div>
                 <div>
-                    Random Page
+                    <a href="{% url 'random' %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
